# CongFu

./: .gitignore  README.md  constants.py  dataset.py  models.py  pyproject.toml  requirements.txt  train.py  utils.py
congfu/: dataset.py  layers.py  models.py  utils.py
data/init/: cellosaurus_cosmic_ids.txt
preprocessing/: create_inductive_splits.py  create_transductive_splits.py  kfold_split.py  process_drugcomb.py
